# TakeControl

./: CMakeLists.txt  README.md
cmake/: addToBinDir.cmake  common.cmake  searchDependencies.cmake  variables.cmake
config/: Config.h.in
dependencies/: build-dependencies.bat  build-gmock.bat
include/client/: CharacterTab.h  DialogTab.h  MainWindow.h  NewProjectDialog.h  TranslateableTextTab.h
include/client/commands/: AddCharacterCommand.h  AddConnectionCommand.h  AddDialogCommand.h  AddNodeCommand.h  AddTranslateableTextCommand.h  ChangeTranslateableTextValueCommand.h  RemoveConnectionCommand.h  RemoveNodeCommand.h
include/core/: Character.h  CharacterPool.h  ConditionFactory.h  Config.h  Connection.h  CoreParameters.h  CoreTypes.h  Dialog.h  DialogPool.h  ICondition.h  IGamePlugin.h  INode.h  IProperty.h  NodeFactory.h  Project.h  PropertyFactory.h  TranslateableText.h  TranslateableTextPool.h
include/core/commands/: SetCharacterPropertyValueCommand.h  SetTextPropertyValueCommand.h  SetTranslateableTextPropertyValueCommand.h
include/core/nodes/: AndNode.h  BranchingNode.h  ConditionNode.h  ExitConversationNode.h  OrNode.h  OutputNode.h  RepeatableDialogNode.h  TextNode.h  TranslateableTextNode.h
include/core/properties/: CharacterProperty.h  TextProperty.h  TranslateableTextProperty.h
include/gothic2plugin/: Gothic2Plugin.h
include/gui/: CharacterPropertyItem.h  ConnectionItem.h  ConnectorItem.h  GraphicsScene.h  GraphicsView.h  GuiParameters.h  NodeItem.h  NodeItemFactory.h  PropertyItem.h  PropertyItemFactory.h
include/gui/properties/: CharacterPropertyItem.h  TextPropertyItem.h  TranslateableTextPropertyItem.h
include/nodes/: ConditionFactory.h  INode.h  NodeFactory.h  PropertyFactory.h  nodesParameters.h
include/nodes/implementations/: AndNode.h  OrNode.h
include/nodes/implementations/nodes/: AndNode.h  ConditionNode.h  OrNode.h
include/nodes/implementations/properties/: CharacterProperty.h
include/nodes/interfaces/: ICondition.h  INode.h  IProperty.h
include/nodesGui/: CharacterPropertyItem.h  NodeItem.h  NodeItemFactory.h  PropertyItem.h  PropertyItemFactory.h  nodesGuiParameters.h
include/plugins/: IGamePlugin.h  PluginLoader.h  pluginsParameters.h
include/projects/: NewProjectDialog.h  Project.h
include/redskiesascensiondemoplugin/: RedSkiesAscensionDemoPlugin.h
include/utils/: ChangeIdentifierCommand.h  Character.h  CharacterPool.h  Config.h  Dialog.h  DialogPool.h  EditableListViewModel.h  Singleton.h  UndoStack.h  utilsParameters.h
languages/: de_DE.ts  en_US.ts
resources/: resources.qrc
src/: CMakeLists.txt
src/client/: CMakeLists.txt  CharacterTab.cpp  DialogTab.cpp  MainWindow.cpp  NewProjectDialog.cpp  TranslateableTextTab.cpp  main.cpp
src/client/commands/: AddCharacterCommand.cpp  AddConnectionCommand.cpp  AddDialogCommand.cpp  AddNodeCommand.cpp  AddTranslateableTextCommand.cpp  ChangeTranslateableTextValueCommand.cpp  RemoveConnectionCommand.cpp  RemoveNodeCommand.cpp
src/core/: CMakeLists.txt  Character.cpp  CharacterPool.cpp  ConditionFactory.cpp  Config.cpp  Connection.cpp  Dialog.cpp  DialogPool.cpp  ICondition.cpp  INode.cpp  IProperty.cpp  NodeFactory.cpp  Project.cpp  PropertyFactory.cpp  TranslateableText.cpp  TranslateableTextPool.cpp
src/core/commands/: SetCharacterPropertyValueCommand.cpp  SetTextPropertyValueCommand.cpp  SetTranslateableTextPropertyValueCommand.cpp
src/core/nodes/: AndNode.cpp  BranchingNode.cpp  ConditionNode.cpp  ExitConversationNode.cpp  OrNode.cpp  OutputNode.cpp  RepeatableDialogNode.cpp  TextNode.cpp  TranslateableTextNode.cpp
src/core/properties/: CharacterProperty.cpp  TextProperty.cpp  TranslateableTextProperty.cpp
src/gothic2plugin/: CMakeLists.txt  Gothic2Plugin.cpp
src/gui/: CMakeLists.txt  CharacterPropertyItem.cpp  ConnectionItem.cpp  ConnectorItem.cpp  GraphicsScene.cpp  GraphicsView.cpp  NodeItem.cpp  NodeItemFactory.cpp  PropertyItemFactory.cpp
src/gui/properties/: CharacterPropertyItem.cpp  TextPropertyItem.cpp  TranslateableTextPropertyItem.cpp
src/nodes/: CMakeLists.txt  ConditionFactory.cpp  INode.cpp  NodeFactory.cpp  PropertyFactory.cpp
src/nodes/implementations/: AndNode.cpp  ConditionNode.cpp  OrNode.cpp
src/nodes/implementations/nodes/: AndNode.cpp  ConditionNode.cpp  OrNode.cpp
src/nodes/implementations/properties/: CharacterProperty.cpp
src/nodes/interfaces/: ICondition.cpp  INode.cpp  IProperty.cpp
src/nodesGui/: CMakeLists.txt  CharacterPropertyItem.cpp  NodeItem.cpp  NodeItemFactory.cpp  PropertyItemFactory.cpp
src/plugins/: CMakeLists.txt  PluginLoader.cpp
src/projects/: CMakeLists.txt  NewProjectDialog.cpp  Project.cpp
src/redskiesascensiondemoplugin/: CMakeLists.txt  RedSkiesAscensionDemoPlugin.cpp
src/utils/: CMakeLists.txt  ChangeIdentifierCommand.cpp  Character.cpp  CharacterPool.cpp  Config.cpp  Dialog.cpp  DialogPool.cpp  EditableListViewModel.cpp  UndoStack.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  main.cpp  test_AndNode.cpp  test_BranchingNode.cpp  test_Character.cpp  test_CharacterProperty.cpp  test_Connection.cpp  test_ExitConversationNode.cpp  test_OrNode.cpp  test_OutputNode.cpp  test_TextNode.cpp  test_TextProperty.cpp  test_TranslateableText.cpp
tests/core/resources/AndNode/: load.json  save.json
tests/core/resources/BranchingNode/: load.json  save.json
tests/core/resources/Character/: load.json  save.json
tests/core/resources/CharacterProperty/: load.json  save.json
tests/core/resources/Connection/: load.json  save.json
tests/core/resources/ExitConversationNode/: load.json  save.json
tests/core/resources/OrNode/: load.json  save.json
tests/core/resources/OutputNode/: load.json  save.json
tests/core/resources/TextNode/: load.json  save.json
tests/core/resources/TextProperty/: load.json  save.json
tests/core/resources/TranslateableText/: load.json  save.json
tests/gothic2plugin/: CMakeLists.txt  main.cpp  test_Gothic2Plugin.cpp
tests/gothic2plugin/resources/EndDialog/: Dialog.d  G2.json
tests/gothic2plugin/resources/ImportantDialog/: Dialog.d  G2.json
